# Vibe-OS

./: Cargo.toml  VibeOS.iso  limine.conf  linker.ld
.cargo/: config.toml
.github/workflows/: kernel.yml
drivers/framebuffer/: Cargo.toml
drivers/framebuffer/src/: lib.rs
krnl/: Cargo.toml  link.ld
krnl/src/: boot.S  boot.rs
src/: kernel.rs
