[package]
name = "Vibe-OS"
version = "0.1.1"
edition = "2021"

[workspace]
members = [
    ".",
    "drivers/framebuffer"
]

[[bin]]
name = "vibe-os"
path = "src/kernel.rs"

[profile.release]
panic = "abort"

[dependencies]
limine = "0.5.0"
vibe_framebuffer = { path = "drivers/framebuffer" }
spleen-font = { version = "0.2", features = ["s16x32"] }
linked_list_allocator = "0.10.5"
